fixing phantom white space under purple_block

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,4 +1,7 @@
 /* Mountains */
+
+/* #root{background-color: rgb(179, 245, 206);} */
+
 #overlay{
     background-color: rgba(220, 220, 220, 0.73);
     overflow: hidden;
@@ -56,17 +59,14 @@ button {
 }
 
 #purple_block{
-    height: 450px;
+    /* height: 300px; */
     color: white;
     font-weight: bold;
     text-align: center;
     background-color: rgb(36, 15, 56);
 }
 
-#learn{
-    margin-top: 30px;
-    display: flex; 
-}
+#learn{display: flex;}
 
 .item{
     width: 400px;
@@ -74,8 +74,9 @@ button {
 }
 
 #course{
-    height: 700px;
+    /* height: 700px; */
     text-align: center;
+    margin-bottom: 30px;
 }
 
 .dark_purple{color: rgb(58, 0, 58);}
@@ -92,7 +93,6 @@ button {
     display: flex;
     justify-content: center;
     text-align: left;
-    height: 500px;
 }
 /* Display Board */
 
